--- a/index.html
+++ b/index.html
@@ -10,7 +10,47 @@
 </head>
 
 <body>
-
+    <main>
+        <div class="calculator">
+            <div class="top-buttons">
+                <button class="close"></button>
+                <button class="minimize"></button>
+                <button class="expand"></button>
+            </div>
+            <div class="display">0</div>
+            <div class="controls">
+                <div class="row">
+                    <button class="operator gray clear">AC</button>
+                    <button class="operator gray alternate">±</button>
+                    <button class="operator gray percentage">%</button>
+                    <button class="operator orange divide">/</button>
+                </div>
+                <div class="row">
+                    <button class="number">7</button>
+                    <button class="number">8</button>
+                    <button class="number">9</button>
+                    <button class="operator orange multiply">x</button>
+                </div>
+                <div class="row">
+                    <button class="number">4</button>
+                    <button class="number">5</button>
+                    <button class="number">6</button>
+                    <button class="operator orange subtract">-</button>
+                </div>
+                <div class="row">
+                    <button class="number">1</button>
+                    <button class="number">2</button>
+                    <button class="number">3</button>
+                    <button class="operator orange add">+</button>
+                </div>
+                <div class="row">
+                    <button class="number zero">0</button>
+                    <button class="number comma">,</button>
+                    <button class="operator orange equals">=</button>
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
 
 </html>
