--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
                 <button class="minimize"></button>
                 <button class="expand"></button>
             </div>
-            <div class="display">0</div>
+            <div class="display">
+                <p class="result">0</p>
+            </div>
             <div class="controls">
                 <div class="row">
                     <button class="operator gray clear">AC</button>
