Operate on equals click

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <div class="row">
                     <button class="number zero">0</button>
                     <button class="number comma">,</button>
-                    <button class="operator orange equals">=</button>
+                    <button class="orange equals">=</button>
                 </div>
             </div>
         </div>
