Round result 3 decimals

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
             </div>
             <div class="controls">
                 <div class="row">
-                    <button class="operator gray clear">AC</button>
-                    <button class="operator gray alternate">±</button>
-                    <button class="operator gray percentage">%</button>
+                    <button class="special gray clear">AC</button>
+                    <button class="todo gray alternate">±</button>
+                    <button class="todo gray percentage">%</button>
                     <button class="operator orange divide">/</button>
                 </div>
                 <div class="row">
