Fix decimals not showing

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 </div>
                 <div class="row">
                     <button class="number zero">0</button>
-                    <button class="number comma">,</button>
+                    <button class="number comma">.</button>
                     <button class="orange equals">=</button>
                 </div>
             </div>
